# hexl-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  wrapper.h
benches/: modulus.rs  ntt.rs
src/: lib.rs  main.rs
