[package]
name = "hexl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
link-cplusplus="1.0.5"
rand = "0.8.5"

[dev-dependencies]
rayon = "1.6.1"
criterion = "0.4"
ndarray = {version = "0.15.6"}

[build-dependencies]
cmake = "0.1.49"
bindgen = "0.63.0"

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "modulus"
harness = false